[package]
name = "atthemeeditorbot"
version = "2.0.0"
authors = ["SnejUgal <contact@snejugal.ru>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
dotenv = "0.15"
tbot = { version = "0.5", default-features = false, features = ["rustls"] }
tokio = { version = "0.2", features = ["macros", "time"] }
attheme = "0.3"
lazy_static = "1.4"

[dependencies.attheme_editor_api]
git = "https://gitlab.com/SnejUgal/attheme-editor-api-rs"
